Add OpenID Connect configuration and git package
The commit modifies several files:
- Moves data/ ignore pattern to service-specific .gitignore
- Adds git package to cloud-init
- Adds OpenID Connect webfinger discovery file
- Reorders container configs for consistency

--- a/cloud-init.yml
+++ b/cloud-init.yml
@@ -16,6 +16,7 @@ users:
 packages:
     - firewalld
     - vim-default-editor
+    - git
     - gh
 cmd:
     - ["systemctl", "enable", "--now", "firewalld"]
