Add RSS feed config and update compose settings
Add feeds.txt with initial RSS sources. Update compose.yaml to set
environment variables for app config, enable post thumbnails, set feed
update frequency, and prune posts after 30 days. Update .gitignore for
new app data path.

--- a/rss/compose.yaml
+++ b/rss/compose.yaml
@@ -24,6 +24,10 @@ services:
             - ts-rss
         environment:
             - APP_NAME=RSS
+            - APP_CONFIG_FILE=/app/storage/feeds.txt
+            - APP_LOAD_POST_THUMBNAILS=true
+            - APP_FEED_UPDATE_FREQUENCY=60
+            - APP_PRUNE_POSTS_AFTER_DAYS=30
         volumes:
             - $PWD/data/rss:/app/storage
         restart: unless-stopped
