Refactor home page layout and add dedicated RSS page
- Move RSS feeds to a new rss.yml page - Update home.yml with new
widgets and improved structure - Remove legacy RSS docker setup and
related files

--- a/glance/data/glance/config/home.yml
+++ b/glance/data/glance/config/home.yml
@@ -1,88 +1,166 @@
 - name: Home
-  # Optionally, if you only have a single page you can hide the desktop navigation for a cleaner look
   # hide-desktop-navigation: true
   columns:
-    - size: small
-      widgets:
-        - type: calendar
-          first-day-of-week: monday
+      - size: small
+        widgets:
+            - type: calendar
+              first-day-of-week: monday
 
-        - type: rss
-          limit: 10
-          collapse-after: 3
-          cache: 12h
-          feeds:
-            - url: https://selfh.st/rss/
-              title: selfh.st
-            - url: https://ciechanow.ski/atom.xml
-            - url: https://www.joshwcomeau.com/rss.xml
-              title: Josh Comeau
-            - url: https://samwho.dev/rss.xml
-            - url: https://ishadeed.com/feed.xml
-              title: Ahmad Shadeed
+            - type: rss
+              limit: 10
+              collapse-after: 3
+              cache: 12h
+              feeds:
+                  - url: https://selfh.st/rss/
+                    title: selfh.st
+                  - url: https://ciechanow.ski/atom.xml
+                  - url: https://www.joshwcomeau.com/rss.xml
+                    title: Josh Comeau
+                  - url: https://samwho.dev/rss.xml
+                  - url: https://ishadeed.com/feed.xml
+                    title: Ahmad Shadeed
+                  - url: https://blog.tangled.sh/blog/feed.xml
+                    title: tangled engineering
+                  - url: https://console.dev/rss.xml
+                    title: Console.dev Devtools Newsletter - Everything Feed
+                  - url: https://terminaltrove.com/totw.xml
+                    title: Terminal Trove Tool of the Week
+                  - url: https://blog.boot.dev/index.xml
+                    title: Boot.dev Blog
+                  - url: https://charm.sh/blog/rss.xml
+                    title: The Charm Blog
+                  - url: https://xcp-ng.org/blog/feed/
+                    title: XCP-ng Blog
+                  - url: http://www.bleepingcomputer.com/feed/
+                    title: BleepingComputer
+                  - url: https://blog.torproject.org/blog/feed
+                    title: Tor Project blog
+                  - url: https://www.phoronix.com/rss.php
+                    title: Phoronix
+                  - url: https://download.mikrotik.com/routeros/latest-stable-and-long-term.rss
+                    title: MikroTik RouterOS Stable and Long-Term releases
+                  - url: http://krebsonsecurity.com/feed/
+                    title: Krebs on Security
+                  - url: https://tailscale.com/blog/index.xml
+                    title: Blog on Tailscale
+                  - url: http://news.ycombinator.com/rss
+                    title: Hacker News
+                  - url: https://mullvad.net/en/blog/feed/atom/
+                    title: The Mullvad Blog
+                  - url: https://www.nobsbitcoin.com/rss/
+                    title: No Bullshit Bitcoin
+                  - url: https://fedoramagazine.org/feed/
+                    title: Fedora Magazine
+                  - url: http://www.hackaday.com/rss.xml
+                    title: Blog – Hackaday
+                  - url: https://www.theverge.com/rss/partner/subscriber-only-full-feed/rss.xml
+                    title: The Verge - Full RSS for subscribers | The Verge
+                  - url: https://planet.gnome.org/rss20.xml
+                    title: Planet GNOME
+                  - url: https://github.blog/feed/
+                    title: The GitHub Blog
+                  - url: https://kite.kagi.com/world.xml
+                    title: Kite News - World
 
-        - type: twitch-channels
-          channels:
-            - theprimeagen
-            - j_blow
-            - piratesoftware
-            - cohhcarnage
-            - christitustech
-            - EJ_SA
+            - type: twitch-channels
+              channels:
+                  - theprimeagen
+                  - j_blow
+                  - piratesoftware
+                  - cohhcarnage
+                  - christitustech
+                  - EJ_SA
 
-    - size: full
-      widgets:
-        - type: group
-          widgets:
-            - type: hacker-news
-            - type: lobsters
+      - size: full
+        widgets:
+            - type: search
+              autofocus: true
 
-        - type: videos
-          channels:
-            - UCXuqSBlHAE6Xw-yeJA0Tunw # Linus Tech Tips
-            - UCR-DXc1voovS8nhAvccRZhg # Jeff Geerling
-            - UCsBjURrPoezykLs9EqgamOA # Fireship
-            - UCBJycsmduvYEL83R_U4JriQ # Marques Brownlee
-            - UCHnyfMqiRRG1u-2MsSQLbXA # Veritasium
+            - type: monitor
+              cache: 1m
+              title: Services
+              sites:
+                  - title: Memos
+                    url: https://memos.duckbill-karat.ts.net
+                    icon: sh:Memos
+                  - title: RSS
+                    url: https://rss.duckbill-karat.ts.net
+                    icon: si:rss
 
-        - type: group
-          widgets:
-            - type: reddit
-              subreddit: technology
-              show-thumbnails: true
-            - type: reddit
-              subreddit: selfhosted
-              show-thumbnails: true
+            - type: group
+              widgets:
+                  - type: hacker-news
+                  - type: lobsters
 
-    - size: small
-      widgets:
-        - type: weather
-          location: London, United Kingdom
-          units: metric # alternatively "imperial"
-          hour-format: 12h # alternatively "24h"
-          # Optionally hide the location from being displayed in the widget
-          # hide-location: true
+            - type: videos
+              channels:
+                  - UCXuqSBlHAE6Xw-yeJA0Tunw # Linus Tech Tips
+                  - UCR-DXc1voovS8nhAvccRZhg # Jeff Geerling
+                  - UCsBjURrPoezykLs9EqgamOA # Fireship
+                  - UCBJycsmduvYEL83R_U4JriQ # Marques Brownlee
+                  - UCHnyfMqiRRG1u-2MsSQLbXA # Veritasium
 
-        - type: markets
-          markets:
-            - symbol: SPY
-              name: S&P 500
-            - symbol: BTC-USD
-              name: Bitcoin
-            - symbol: NVDA
-              name: NVIDIA
-            - symbol: AAPL
-              name: Apple
-            - symbol: MSFT
-              name: Microsoft
+            - type: group
+              widgets:
+                  - type: reddit
+                    subreddit: technology
+                    show-thumbnails: true
+                  - type: reddit
+                    subreddit: selfhosted
+                    show-thumbnails: true
 
-        - type: releases
-          cache: 1d
-          # Without authentication the Github API allows for up to 60 requests per hour. You can create a
-          # read-only token from your Github account settings and use it here to increase the limit.
-          # token: ...
-          repositories:
-            - glanceapp/glance
-            - go-gitea/gitea
-            - immich-app/immich
-            - syncthing/syncthing
+            - type: bookmarks
+              groups:
+                  - title: General
+                    links:
+                        - title: Gmail
+                          url: https://mail.google.com/mail/u/0/
+                        - title: Amazon
+                          url: https://www.amazon.com/
+                        - title: Github
+                          url: https://github.com/
+                  - title: Entertainment
+                    links:
+                        - title: YouTube
+                          url: https://www.youtube.com/
+                        - title: Prime Video
+                          url: https://www.primevideo.com/
+                        - title: Disney+
+                          url: https://www.disneyplus.com/
+                  - title: Social
+                    links:
+                        - title: Reddit
+                          url: https://www.reddit.com/
+                        - title: Twitter
+                          url: https://twitter.com/
+                        - title: Instagram
+                          url: https://www.instagram.com/
+
+      - size: small
+        widgets:
+            - type: weather
+              location: Tallinn, Estonia
+              units: metric
+              hour-format: 24h
+
+            - type: markets
+              markets:
+                  - symbol: SPY
+                    name: S&P 500
+                  - symbol: BTC-USD
+                    name: Bitcoin
+                  - symbol: NVDA
+                    name: NVIDIA
+                  - symbol: AAPL
+                    name: Apple
+                  - symbol: MSFT
+                    name: Microsoft
+
+            - type: releases
+              cache: 1d
+              token: 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
+              repositories:
+                  - glanceapp/glance
+                  - go-gitea/gitea
+                  - immich-app/immich
+                  - syncthing/syncthing
