Add DumbBudget service and config for Docker deployment
- Add Docker Compose file and Tailscale config for DumbBudget - Update
.gitignore for new data directories - Add DumbBudget link to Glance home
page

--- a/glance/data/glance/config/home.yml
+++ b/glance/data/glance/config/home.yml
@@ -53,6 +53,9 @@
                   - title: DumbPad
                     url: https://dumbpad.duckbill-karat.ts.net
                     icon: sh:dumbpad.png
+                  - title: DumbBudget
+                    url: https://dumbbudget.duckbill-karat.ts.net
+                    icon: sh:dumbbudget.png
 
             - type: group
               widgets:
