Add DumbAssets link to home config

--- a/glance/data/glance/config/home.yml
+++ b/glance/data/glance/config/home.yml
@@ -56,6 +56,9 @@
                   - title: DumbBudget
                     url: https://dumbbudget.duckbill-karat.ts.net
                     icon: sh:dumbbudget.png
+                  - title: DumbAssets
+                    url: https://dumbassets.duckbill-karat.ts.net
+                    icon: sh:dumbassets.png
 
             - type: group
               widgets:
