Add Jellyfin deployment with Tailscale and CIFS mount
- Add Docker Compose setup for Jellyfin and Tailscale - Add systemd
mount unit for CIFS NAS share - Add required packages to cloud-init -
Add .gitignore for Jellyfin data and config files - Add Tailscale
serve-config for HTTPS proxy

--- a/cloud-init.yml
+++ b/cloud-init.yml
@@ -18,6 +18,10 @@ packages:
     - vim-default-editor
     - git
     - gh
+    - cifs-utils
+    - psmisc
+    - net-tools
+    - dnsutils
 cmd:
     - ["systemctl", "enable", "--now", "firewalld"]
     - ["firewall-cmd", "--permanent", "--add-service=http"]
