--- a/dumbdo/compose.yaml
+++ b/dumbdo/compose.yaml
@@ -9,8 +9,8 @@ services:
             - TS_USERSPACE=false
             - TS_SERVE_CONFIG=/config/serve-config.json
         volumes:
-            - $PWD/data/ts-dumbdo/state:/var/lib/tailscale
-            - $PWD/data/ts-dumbdo/config:/config
+            - ./data/ts-dumbdo/state:/var/lib/tailscale
+            - ./data/ts-dumbdo/config:/config
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -23,5 +23,5 @@ services:
         depends_on:
             - ts-dumbdo
         volumes:
-            - "$PWD/data/dumbdo:/app/data"
+            - ./data/dumbdo:/app/data
         restart: unless-stopped
