--- a/dumbkan/compose.yaml
+++ b/dumbkan/compose.yaml
@@ -9,8 +9,8 @@ services:
             - TS_USERSPACE=false
             - TS_SERVE_CONFIG=/config/serve-config.json
         volumes:
-            - $PWD/data/ts-dumbkan/state:/var/lib/tailscale
-            - $PWD/data/ts-dumbkan/config:/config
+            - ./data/ts-dumbkan/state:/var/lib/tailscale
+            - ./data/ts-dumbkan/config:/config
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -23,5 +23,5 @@ services:
         depends_on:
             - ts-dumbkan
         volumes:
-            - "$PWD/data/dumbkan:/app/data"
+            - ./data/dumbkan:/app/data
         restart: unless-stopped
