--- a/dumbpad/compose.yaml
+++ b/dumbpad/compose.yaml
@@ -9,8 +9,8 @@ services:
             - TS_USERSPACE=false
             - TS_SERVE_CONFIG=/config/serve-config.json
         volumes:
-            - $PWD/data/ts-dumbpad/state:/var/lib/tailscale
-            - $PWD/data/ts-dumbpad/config:/config
+            - ./data/ts-dumbpad/state:/var/lib/tailscale
+            - ./data/ts-dumbpad/config:/config
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -27,5 +27,5 @@ services:
             - DUMBPAD_PIN=
             - BASE_URL=https://dumbpad.duckbill-karat.ts.net
         volumes:
-            - "$PWD/data/dumbpad:/app/data"
+            - ./data/dumbpad:/app/data
         restart: unless-stopped
