--- a/glance/compose.yaml
+++ b/glance/compose.yaml
@@ -9,8 +9,8 @@ services:
             - TS_USERSPACE=false
             - TS_SERVE_CONFIG=/config/serve-config.json
         volumes:
-            - $PWD/data/ts-glance/state:/var/lib/tailscale
-            - $PWD/data/ts-glance/config:/config
+            - ./data/ts-glance/state:/var/lib/tailscale
+            - ./data/ts-glance/config:/config
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -24,7 +24,7 @@ services:
             - ts-glance
         env_file: .env
         volumes:
-            - $PWD/data/glance/config:/app/config
-            - $PWD/data/glance/assets:/app/assets
+            - ./data/glance/config:/app/config
+            - ./data/glance/assets:/app/assets
             - /var/run/docker.sock:/var/run/docker.sock:ro
         restart: unless-stopped
