--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -5,8 +5,8 @@ services:
         networks:
             - proxy
         volumes:
-            - "$PWD/data/traefik/letsencrypt:/letsencrypt"
-            - "/var/run/docker.sock:/var/run/docker.sock:ro"
+            - ./data/traefik/letsencrypt:/letsencrypt
+            - /var/run/docker.sock:/var/run/docker.sock:ro
         ports:
             - "80:80"
             - "443:443"
