--- a/tsidp/compose.yaml
+++ b/tsidp/compose.yaml
@@ -6,6 +6,6 @@ services:
             - ./data/tsidp:/var/lib/tsidp
         environment:
             - TS_AUTHKEY=$TS_AUTHKEY
-            - TS_HOSTNAME=idp
             - TAILSCALE_USE_WIP_CODE=1
+        command: "tsidp --hostname=idp --dir=/var/lib/tsidp"
         restart: unless-stopped
