--- a/tsidp/compose.yaml
+++ b/tsidp/compose.yaml
@@ -7,5 +7,8 @@ services:
         environment:
             - TS_AUTHKEY=$TS_AUTHKEY
             - TAILSCALE_USE_WIP_CODE=1
-        command: "tsidp --hostname=idp --dir=/var/lib/tsidp"
+        command:
+            - "tsidp"
+            - "--hostname=idp"
+            - "--dir=/var/lib/tsidp"
         restart: unless-stopped
