--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -5,6 +5,7 @@ services:
         networks:
             - proxy
         volumes:
+            - ./data/traefik/config:/etc/traefik
             - ./data/traefik/letsencrypt:/letsencrypt
             - /var/run/docker.sock:/var/run/docker.sock:ro
         ports:
@@ -14,22 +15,6 @@ services:
             - CF_DNS_API_TOKEN=$CF_DNS_API_TOKEN
         labels:
             - "traefik.enable=false"
-        command:
-            - "--log.level=info"
-            - "--accesslog=false"
-            - "--api.insecure=true"
-            - "--providers.docker=true"
-            - "--providers.docker.exposedbydefault=false"
-            - "--entrypoints.web.address=:80"
-            - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
-            - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
-            - "--entrypoints.websecure.address=:443"
-            - "--entrypoints.websecure.http.tls.certresolver=cloudflare"
-            - "--certificatesresolvers.cloudflare.acme.dnschallenge=true"
-            - "--certificatesresolvers.cloudflare.acme.dnschallenge.provider=cloudflare"
-            - "--certificatesresolvers.cloudflare.acme.email=postmaster@solisec.org"
-            - "--certificatesresolvers.cloudflare.acme.storage=/letsencrypt/acme.json"
-            - "--serversTransport.insecureSkipVerify=true"
         restart: unless-stopped
 networks:
     proxy:
