--- a/dumbassets/compose.yaml
+++ b/dumbassets/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-dumbassets:
-        image: tailscale/tailscale:latest
+        image: docker.io/tailscale/tailscale:latest
         container_name: ts-dumbassets
         hostname: dumbassets
         environment:
@@ -17,7 +17,7 @@ services:
             - net_admin
         restart: unless-stopped
     dumbassets:
-        image: dumbwareio/dumbassets:latest
+        image: docker.io/dumbwareio/dumbassets:latest
         container_name: dumbassets
         network_mode: service:ts-dumbassets
         depends_on:
