--- a/dumbdo/compose.yaml
+++ b/dumbdo/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-dumbdo:
-        image: tailscale/tailscale:latest
+        image: docker.io/tailscale/tailscale:latest
         container_name: ts-dumbdo
         hostname: dumbdo
         environment:
@@ -17,7 +17,7 @@ services:
             - net_admin
         restart: unless-stopped
     dumbdo:
-        image: dumbwareio/dumbdo:latest
+        image: docker.io/dumbwareio/dumbdo:latest
         container_name: dumbdo
         network_mode: service:ts-dumbdo
         depends_on:
