--- a/dumbkan/compose.yaml
+++ b/dumbkan/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-dumbkan:
-        image: tailscale/tailscale:latest
+        image: docker.io/tailscale/tailscale:latest
         container_name: ts-dumbkan
         hostname: dumbkan
         environment:
@@ -17,7 +17,7 @@ services:
             - net_admin
         restart: unless-stopped
     dumbkan:
-        image: dumbwareio/dumbkan:latest
+        image: docker.io/dumbwareio/dumbkan:latest
         container_name: dumbkan
         network_mode: service:ts-dumbkan
         depends_on:
