--- a/pocket-id/compose.yaml
+++ b/pocket-id/compose.yaml
@@ -20,7 +20,7 @@ services:
             start_period: 10s
         restart: unless-stopped
     webfinger:
-        image: nginx
+        image: docker.io/nginx
         container_name: webfinger
         networks:
             - proxy
