--- a/searxng/compose.yaml
+++ b/searxng/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-searxng:
-        image: tailscale/tailscale:latest
+        image: docker.io/tailscale/tailscale:latest
         container_name: ts-searxng
         hostname: searxng
         environment:
