--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -1,6 +1,6 @@
 services:
     traefik:
-        image: traefik:v3
+        image: docker.io/traefik:v3
         container_name: traefik
         networks:
             - proxy
