--- a/bitwarden/compose.yaml
+++ b/bitwarden/compose.yaml
@@ -9,8 +9,8 @@ services:
             - TS_USERSPACE=false
             - TS_SERVE_CONFIG=/config/serve-config.json
         volumes:
-            - ./data/ts-bitwarden/state:/var/lib/tailscale
-            - ./data/ts-bitwarden/config:/config
+            - ts-bitwarden-state:/var/lib/tailscale
+            - ./serve-config.json:/config/serve-config.json
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -25,5 +25,11 @@ services:
         env_file:
             - .env
         volumes:
-            - ./data/bitwarden:/etc/bitwarden
+            - bitwarden-data:/etc/bitwarden
         restart: unless-stopped
+
+volumes:
+    ts-bitwarden-state:
+        name: ts-bitwarden-state
+    bitwarden-data:
+        name: bitwarden-data
