--- a/dumbassets/compose.yaml
+++ b/dumbassets/compose.yaml
@@ -9,8 +9,8 @@ services:
             - TS_USERSPACE=false
             - TS_SERVE_CONFIG=/config/serve-config.json
         volumes:
-            - ./data/ts-dumbassets/state:/var/lib/tailscale
-            - ./data/ts-dumbassets/config:/config
+            - ts-dumbassets-state:/var/lib/tailscale
+            - ./serve-config.json:/config/serve-config.json
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -25,5 +25,11 @@ services:
         environment:
             - BASE_URL=https://dumbassets.duckbill-karat.ts.net
         volumes:
-            - ./data/dumbassets:/app/data
+            - dumbassets-data:/app/data
         restart: unless-stopped
+
+volumes:
+    ts-dumbassets-state:
+        name: ts-dumbassets-state
+    dumbassets-data:
+        name: dumbassets-data
