--- a/dumbkan/compose.yaml
+++ b/dumbkan/compose.yaml
@@ -9,8 +9,8 @@ services:
             - TS_USERSPACE=false
             - TS_SERVE_CONFIG=/config/serve-config.json
         volumes:
-            - ./data/ts-dumbkan/state:/var/lib/tailscale
-            - ./data/ts-dumbkan/config:/config
+            - ts-dumbkan-state:/var/lib/tailscale
+            - ./serve-config.json:/config/serve-config.json
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -23,5 +23,11 @@ services:
         depends_on:
             - ts-dumbkan
         volumes:
-            - ./data/dumbkan:/app/data
+            - dumbkan-data:/app/data
         restart: unless-stopped
+
+volumes:
+    ts-dumbkan-state:
+        name: ts-dumbkan-state
+    dumbkan-data:
+        name: dumbkan-data
