--- a/dumbpad/compose.yaml
+++ b/dumbpad/compose.yaml
@@ -9,8 +9,8 @@ services:
             - TS_USERSPACE=false
             - TS_SERVE_CONFIG=/config/serve-config.json
         volumes:
-            - ./data/ts-dumbpad/state:/var/lib/tailscale
-            - ./data/ts-dumbpad/config:/config
+            - ts-dumbpad-state:/var/lib/tailscale
+            - ./serve-config.json:/config/serve-config.json
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -27,5 +27,11 @@ services:
             - DUMBPAD_PIN=
             - BASE_URL=https://dumbpad.duckbill-karat.ts.net
         volumes:
-            - ./data/dumbpad:/app/data
+            - dumbpad-data:/app/data
         restart: unless-stopped
+
+volumes:
+    ts-dumbpad-state:
+        name: ts-dumbpad-state
+    dumbpad-data:
+        name: dumbpad-data
