--- a/gitea/compose.yaml
+++ b/gitea/compose.yaml
@@ -9,8 +9,8 @@ services:
             - TS_USERSPACE=false
             - TS_SERVE_CONFIG=/config/serve-config.json
         volumes:
-            - ./data/ts-gitea/state:/var/lib/tailscale
-            - ./data/ts-gitea/config:/config
+            - ts-gitea-state:/var/lib/tailscale
+            - ./serve-config.json:/config/serve-config.json
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -26,7 +26,13 @@ services:
             - USER_UID=1000
             - USER_GID=1000
         volumes:
-            - ./data/gitea:/data
+            - gitea-data:/data
             - /etc/timezone:/etc/timezone:ro
             - /etc/localtime:/etc/localtime:ro
         restart: unless-stopped
+
+volumes:
+    ts-gitea-state:
+        name: ts-gitea-state
+    gitea-data:
+        name: gitea-data
