--- a/searxng/compose.yaml
+++ b/searxng/compose.yaml
@@ -9,8 +9,8 @@ services:
             - TS_USERSPACE=false
             - TS_SERVE_CONFIG=/config/serve-config.json
         volumes:
-            - ./data/ts-searxng/state:/var/lib/tailscale
-            - ./data/ts-searxng/config:/config
+            - ts-searxng-state:/var/lib/tailscale
+            - ./serve-config.json:/config/serve-config.json
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -23,6 +23,14 @@ services:
         depends_on:
             - ts-searxng
         volumes:
-            - ./data/searxng/config:/etc/searxng/
-            - ./data/searxng/data:/var/cache/searxng/
+            - searxng-config:/etc/searxng/
+            - searxng-data:/var/cache/searxng/
         restart: unless-stopped
+
+volumes:
+    ts-searxng-state:
+        name: ts-searxng-state
+    searxng-config:
+        name: searxng-config
+    searxng-data:
+        name: searxng-data
