--- a/jellyfin/compose.yaml
+++ b/jellyfin/compose.yaml
@@ -9,8 +9,8 @@ services:
             - TS_USERSPACE=false
             - TS_SERVE_CONFIG=/config/serve-config.json
         volumes:
-            - ./data/ts-jellyfin/state:/var/lib/tailscale
-            - ./data/ts-jellyfin/config:/config
+            - ts-jellyfin-state:/var/lib/tailscale
+            - ./serve-config.json:/config/serve-config.json
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -23,8 +23,8 @@ services:
         depends_on:
             - ts-jellyfin
         volumes:
-            - ./data/jellyfin/config:/config
-            - ./data/jellyfin/cache:/cache
+            - jellyfin-config:/config
+            - jellyfin-cache:/cache
             - type: bind
               source: /mnt/nas/MEDIA
               target: /media
@@ -32,3 +32,11 @@ services:
         environment:
             - JELLYFIN_PublishedServerUrl=https://jellyfin.duckbill-karat.ts.net
         restart: unless-stopped
+
+volumes:
+    ts-jellyfin-state:
+        name: ts-jellyfin-state
+    jellyfin-config:
+        name: jellyfin-config
+    jellyfin-cache:
+        name: jellyfin-cache
